RESOLVED FIXED39811
WebPluginListBuilderImpl::addMediaTypeToLastPlugin does not initialize pluginIndex
https://bugs.webkit.org/show_bug.cgi?id=39811
Summary WebPluginListBuilderImpl::addMediaTypeToLastPlugin does not initialize plugin...
Roland Steiner
Reported 2010-05-26 23:27:08 PDT
The function WebPluginListBuilderImpl::addMediaTypeToLastPlugin() in WebKit/chromium/src does not initialize the pluginIndex field of the MimeClassInfo struct. Quick fix coming shortly. (CC-ing last editor according to 'git blame')
Attachments
patch: initialize pluginIndex field, use .at() instead of [] for indexing mimes (2.46 KB, patch)
2010-05-26 23:42 PDT, Roland Steiner
no flags
patch - quick fix: fix crashing part only (1.33 KB, patch)
2010-05-27 00:20 PDT, Roland Steiner
no flags
Roland Steiner
Comment 1 2010-05-26 23:42:01 PDT
Created attachment 57201 [details] patch: initialize pluginIndex field, use .at() instead of [] for indexing mimes
Roland Steiner
Comment 2 2010-05-27 00:20:45 PDT
Created attachment 57206 [details] patch - quick fix: fix crashing part only Patch landed unreviewed to fix the crashing issue. TBR=andersca@apple.com
Note You need to log in before you can comment on or make changes to this bug.