WebKit/chromium/src/WebPluginListBuilderImpl.cpp
@@ -53,6 +53,7 @@ void WebPluginListBuilderImpl::addMediaTypeToLastPlugin(const WebString& name, c
     MimeClassInfo info;
     info.type = name;
     info.desc = description;
+    info.pluginIndex = m_results->size() - 1;
     m_results->last().mimes.append(info);
 }
 
